maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: '<-' expected but ')' found.
     for (getDirection() == Direction.NORTH ){
                                            ^Escaper:30: error: illegal start of simple expression
}	
^