maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
while(!estSurBiscuit()){
	var etat=0;
etat match  {
  case 0 => // courir au nord
     for (getDirection() == Direction.NORTH ){
     	
     	if (estFaceMur()){
     		 etat = 1
     	}else{
     		avance()
     	}
     }
     etat = 1
     
  case 1 => // suivre à gauche
     
     while (estFaceMur()){
		droite()
	}
	avance()
	gauche()	
	if (getDirection() == Direction.NORTH){
     	etat = 0
	}
	etat = 0
  case _ => return "ERROR"
	
}	
}
prendBiscuit()
	
}    

